--- a/.github/workflows/scraping.yml
+++ b/.github/workflows/scraping.yml
@@ -1,4 +1,4 @@
-name: Scraping & Deploy Brave Frontier on Github Actions
+name: Scraping Brave Frontier on Github Actions
 on:
   push:
     branches:
@@ -44,15 +44,3 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Build site
-      run: npm run build
-    - name: Deploy to production
-      uses: amondnet/vercel-action@v19
-      id: vercel-action-production
-      if: github.event_name == 'push'
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        vercel-org-id: ${{ secrets.ORG_ID }}
-        vercel-project-id: ${{ secrets.PROJECT_ID }}
-        vercel-args: '--prod'
