--- a/.github/workflows/scraping.yml
+++ b/.github/workflows/scraping.yml
@@ -1,11 +1,9 @@
 name: Scraping Brave Frontier on Github Actions
 on:
-  push:
-    branches:
-      - main
   schedule:
     # Run at 23:59 once every three days
     - cron: '59 23 * * 3'
+  workflow_dispatch:
 
 jobs:
   build:
