--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "xbravefrontier",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:css": "postcss public/css/style.css -o public/css/index.css --watch",
+    "watch:css": "postcss public/css/style.css -o public/dist/output.css --watch",
     "watch:js": "rollup -c -w",
-    "prod:css": "postcss public/css/style.css -o public/css/index.css",
+    "prod:css": "postcss public/css/style.css -o public/dist/output.css",
     "prod:js": "rollup -c",
     "build": "NODE_ENV=production npm run prod:css && npm run prod:js"
   },
@@ -22,19 +22,18 @@
   },
   "homepage": "https://github.com/satyakresna/xbravefrontier#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "autoprefixer": "^10.2.5",
-    "cssnano": "^5.0.1",
-    "notyf": "^3.9.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "autoprefixer": "^10.4.7",
+    "cssnano": "^5.1.12",
+    "notyf": "^3.10.0",
     "page": "^1.11.6",
-    "postcss": "^8.2.12",
-    "postcss-cli": "^8.3.1",
-    "rollup": "^2.45.2",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^10.0.0",
+    "rollup": "^2.77.0",
     "rollup-plugin-terser": "^7.0.2",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^3.1.6"
   },
   "engines": {
-    "node": ">=12.14.1"
+    "node": ">=16"
   }
 }
