--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "version": 2,
     "github": {
-        "enabled": true
+        "enabled": true,
+        "silent": true
     },
     "builds": [
       {
