remove scrapers service, data, and github workflow's scrapers

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,17 @@
-name: Deploy Brave Frontier on Github Actions
-on:
-  workflow_dispatch:
+name: Deploy Brave Frontier to Vercel
+on: 
+  push:
+    branches:
+      - vercel
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Setup node
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v2
       with:
-        node-version: '>=12.14.1'
+        node-version: '>=16'
     - name: Install dependecies
       run: npm ci
     - name: Build site
