--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,6 @@
 {
-    "version": 2,
     "github": {
-        "enabled": true,
+        "enabled": false,
         "silent": true
     },
     "builds": [
