--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:css": "postcss public/css/style.css -o public/dist/output.css --watch",
+    "watch:css": "postcss src/css/style.css -o dist/output.css --watch",
     "watch:js": "rollup -c -w",
-    "prod:css": "postcss public/css/style.css -o public/dist/output.css",
+    "prod:css": "postcss src/css/style.css -o dist/output.css",
     "prod:js": "rollup -c",
     "build": "NODE_ENV=production npm run prod:css && npm run prod:js"
   },
@@ -35,5 +35,8 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.7"
   }
 }
